src/sass/_main-page.scss
/* ... */
.news-container {
  @media (max-width: 640px) {
    padding: 0;
    margin: 0;
  }
}
.wrap-mews {
  display: flex;
  margin-top: 220px;
  font-family: $font-family-century;
  @media (max-width: $screen-sm-min) {
    margin-top: 90px;
  }
  @media (max-width: $screen-xs-min) {
    margin-top: 0px;
  }
  .image {
    img{
      width: 445px;
    }
    @media (max-width: 1200px) {
      img {
        width: 350px
      }
    }
    @media (max-width: 823px) {
      img {
        width: 280px
      }
    }
    @media (max-width: 640px) {
      img {
        display: none;
      }
    }


  }
  .news {
    color: #757575;
    display: flex;
    flex-direction: column;
    margin-left: 60px;
    margin-right: -100px;
    @media (max-width: 1600px) {
      margin-right: 0px;
    }
    @media (max-width: 1200px) {
      margin-left: 30px;
    }
    @media (max-width: 640px) {
      margin-left: 0px;
    }
    @media (max-width: 510px) {
      font-size: 15px;
    }
    .news-subtitle {
      margin-left: 15px;
      @media (max-width: 1200px) {
        margin-left: 0px;
      }
      p {
        font-weight: 200;
        font-size: 24px;
        margin-bottom: 45px;
        line-height: 30px;
        @media (max-width: 1380px) {
          font-size: 20px;
          margin-bottom: 40px;
        }
        @media (max-width: 1200px) {
          text-align: center;
        }
        @media (max-width: 640px) {
          margin-bottom: 10px;
        }
        @media (max-width: 991px) {
          font-size: 15px;
        }
      }
    }
    .news-title {
      display: flex;
      align-items: center;
      margin-bottom: 50px;
      margin-left: 15px;
      @media (max-width: 1200px) {
        justify-content: center;
        margin-bottom: 15px;
        margin-left: 0px;
      }
      @media (max-width:753px) {
        flex-direction: column;
      }
      h2 {
        font-size: 40px;
        padding-right: 10px;
        font-weight: 300;
        @media (max-width: 991px) {
          font-size: 35px;
        }
      }
      img {
        width: 350px;
        @media (max-width: 991px) {
          width: 300px;
        }
        @media (max-width: 640px) {
          width: 280px;
        }
      }
    }
    .wrap-news-card{
      .news-card{
        margin-bottom: 50px;
        @media (max-width: 640px) {
          margin-bottom: 20px;
        }
        p{
          font-weight: 200;
          color: #716969;
          font-size: 20px;
          text-align: left;
          @media (max-width: 1366px) {
            font-size: 18px;
          }
          @media (max-width: 1280px) {
            font-size: 17px;
          }
          @media (max-width: 991px) {
            font-size: 15px;
          }
          @media (max-width: 640px) {
            font-size: 13px;
          }
        }
        .news-icon {
          display: flex;
          align-items: center;
          color: #3b7eb1;
          margin-bottom: 25px;
          img {
            margin-right: 5px;
            @media (max-width: 991px) {
              width: 50px;
            }
          }
          h3 {
            font-size: 30px;
            margin: 0;
            text-transform: uppercase;
            @media (max-width: 1366px) {
              font-size: 25px;
            }
            @media (max-width: 1280px) {
              font-size: 25px;
            }
            @media (max-width: 991px) {
              font-size: 20px;
            }
          }
        }
      }
      .news-card.last{
        @media (max-width: 640px) {
          margin-bottom: 20px;
          padding: 0 15px;
        }
      }
    }
    .last {
      @media (max-width: 640px) {
        padding: 0;
      }
    }
    .wrap-news-card.last{
      @media (max-width: 640px) {
        position: relative;
        padding-bottom: 320px;
        background: url(../assets/bottle.png) no-repeat bottom;
        background-size: cover;
        width: 100%;
        z-index: 10;
      }
    }
    .gradient {
      @media (max-width: 640px) {
        position: absolute;
        width: 100%;
        height: 220px;
        z-index: -1;
        top: -1px;
        background: -webkit-gradient(linear,left top,left bottom,from(white),to(rgba(255,255,255,0)));
        background: linear-gradient(to bottom,#fff 0,rgba(255,255,255,0) 100%);
      }
    }
  }

}
.wrap-carousel {
  #carousel-after-news {
    .slide-title {
      font-family: $font-family-century;
      font-weight: 400;
      @media (max-width: $screen-xxs-min) {
        top: 5px;
        h2 {
          font-size: 50px;
          @media(max-width: 1440px){
              font-size: 30px;
          }
        }
        p {
          font-size: 25px;
          letter-spacing: 1px;
          @media(max-width: 1440px){
            font-size: 18px;
          }
        }
      }
    }
    .slide-title.blue{
      color: #3b7eb1;
    }
    .gradient {
      height: 50px;
    }
    .slide-input {
      .search-products {
        padding: 10px 0;
        @media (max-width: $screen-xxs-min) {
          padding: 10px 35px;
        }
      }
    }
  }
}

